--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^4.1.3",
         "@tailwindcss/vite": "^4.0.13",
         "axios": "^1.8.2",
+        "lucide-react": "^0.479.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
