--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "dependencies": {
         "@aws-sdk/client-dynamodb": "^3.758.0",
+        "@aws-sdk/client-s3": "^3.758.0",
         "@aws-sdk/lib-dynamodb": "^3.758.0",
         "@aws-sdk/util-dynamodb": "^3.758.0",
         "cors": "^2.8.5",
