--- a/server/package.json
+++ b/server/package.json
@@ -15,15 +15,18 @@
     "license": "ISC",
     "dependencies": {
         "@aws-sdk/client-dynamodb": "^3.758.0",
+        "@aws-sdk/client-s3": "^3.758.0",
         "@aws-sdk/lib-dynamodb": "^3.758.0",
         "@aws-sdk/util-dynamodb": "^3.758.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "multer": "^1.4.5-lts.1",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
         "@types/express": "^5.0.0",
+        "@types/multer": "^1.4.12",
         "@types/node": "^22.13.10",
         "nodemon": "^3.1.9",
         "ts-node": "^10.9.2",
